--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ distlib==0.3.0
 distro==1.4.0
 Flask==1.1.2
 Flask-Bcrypt==0.7.1
+Flask-JWT-Extended==3.24.1
 Flask-SQLAlchemy==2.4.1
 html5lib==1.0.1
 idna==2.8
@@ -28,6 +29,7 @@ packaging==20.3
 pep517==0.8.2
 progress==1.5
 pycparser==2.20
+PyJWT==1.7.1
 pylint==2.5.0
 pyparsing==2.4.6
 pytoml==0.1.21
