--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ chardet==3.0.4
 click==7.1.2
 colorama==0.4.3
 contextlib2==0.6.0
+diff-match-patch==20181111
 distlib==0.3.0
 distro==1.4.0
 Flask==1.1.2
@@ -33,6 +34,7 @@ PyJWT==1.7.1
 pylint==2.5.0
 pyparsing==2.4.6
 pytoml==0.1.21
+pyzmq==19.0.0
 requests==2.22.0
 retrying==1.3.3
 six==1.14.0
@@ -42,3 +44,4 @@ urllib3==1.25.8
 webencodings==0.5.1
 Werkzeug==1.0.1
 wrapt==1.12.1
+zmq==0.0.0
