--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 appdirs==1.4.3
-astroid==2.4.0
+astroid==2.4.1
 bcrypt==3.1.7
 CacheControl==0.12.6
 certifi==2019.11.28
@@ -31,9 +31,10 @@ pep517==0.8.2
 progress==1.5
 pycparser==2.20
 PyJWT==1.7.1
-pylint==2.5.0
+pylint==2.5.2
 pyparsing==2.4.6
 pytoml==0.1.21
+PyYAML==5.3.1
 pyzmq==19.0.0
 requests==2.22.0
 retrying==1.3.3
