--- a/requirements.txt
+++ b/requirements.txt
@@ -25,12 +25,13 @@ pycparser==2.20
 PyJWT==1.7.1
 pylint==2.5.2
 pyparsing==2.4.6
-PySide2==5.14.2.1
+pyperclip==1.8.0
+PySide2==5.15.0
 pytoml==0.1.21
 requests==2.22.0
 retrying==1.3.3
-shiboken2==5.14.2.1
-six==1.14.0
+shiboken2==5.15.0
+six==1.15.0
 SQLAlchemy==1.3.17
 toml==0.10.0
 urllib3==1.25.8
