--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,6 @@ packaging==20.3
 pep517==0.8.2
 progress==1.5
 pycparser==2.20
-PyJWT==1.7.1
 pylint==2.5.2
 pyparsing==2.4.6
 pyperclip==1.8.0
@@ -36,4 +35,5 @@ SQLAlchemy==1.3.17
 toml==0.10.0
 urllib3==1.25.8
 webencodings==0.5.1
+websockets==8.1
 wrapt==1.12.1
